pare poprawek w layout

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -35,7 +35,16 @@ body {
       margin: auto;
       margin-top: 0px;
       margin-bottom: 10px;
-      padding: 50px 200px;
+      padding: 40px 200px;
+      width: 100%;
+      }
+
+
+ .containerY {   
+      margin: auto;
+      margin-top: 0px;
+      margin-bottom: 10px;
+      padding: 20px 200px;
       width: 100%;
       }
 
