--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -125,8 +125,8 @@
 <div id="log_in">
 <br>
 <h2>Log in</h2>
-<div class="row slideanim">
-  <div class="col-md-4 col-md-offset-4">
+<div class="row slideanim containerY">
+  <div class="col-md-6 col-md-offset-3">
     <%= form_for(:session, url: login_path) do |f| %>
 
       <%= f.label :email %>
@@ -143,7 +143,6 @@
 
       <%= f.submit "Submit", class: "btn btn-primary" %>
     <% end %>
-    <br>
   </div>
 </div>
 </div>
