--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -216,12 +216,13 @@ section {
 #about h1 {
   background-color: #FF5733;
   color: white;
-  padding: 20px 20px;
+  padding: 10px 10px;
   position: relative;
   margin:auto;
-  width: 550px;
+  width: 450px;
   border-radius: 10px;
   font-weight: 300;
+  font-size: 2.2em;
 
 }
 
