--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -239,7 +239,7 @@ $(document).ready(function(){
 </script>
 
 <!-- Add Google Maps -->
-<div class ="slideanim" id="googleMap"></div>
+<div id="googleMap"></div>
 <br>
 <br>
 <br>
