--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,8 +4,8 @@
 
 <h2>Sign up</h2>
 <br>
-<div class="row">
- <div class="col-md-4 col-md-offset-4">
+<div class="row containerY">
+ <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user, url: signup_path) do |f| %>
        <%= render 'shared/error_messages', object: f.object %>
 
