--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
   <div class="navbar-header">
-  <canvas id="canvas" width="80" height="40" style="cursor: pointer;" onclick="window.location='/';"></canvas>
+   <%= link_to image_tag("logoX.gif", alt: "Logo", size: "80x50", class: 'navbar-brand'), root_path %>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar2">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
