--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,9 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
      <div class="navbar-header">
-     <canvas id="canvas" width="80" height="40" style="cursor: pointer;" onclick="window.location='/';"></canvas>
+
+     <%= link_to image_tag("logoX.gif", alt: "Logo", size: "80x50", class: 'navbar-brand'), root_path %>
+
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -40,29 +42,12 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right navbar-custom">
 
-
-  <script>
-     var canvas = document.getElementById("canvas"); 
-     var ctx = canvas.getContext("2d");
-     ctx.font = "100 40px Ruge Boogie"; 
-     ctx.fillStyle = 'black';
-     ctx.fillText("</   >", 0, 40);
-     ctx.font = "100 46px Ruge Boogie";
-     ctx.fillStyle = 'red';
-     ctx.fillText("?", 37, 40);
-  </script>
-
       <% if current_page?(root_path) %>
   
         <li><%= link_to "Home", '#home' %></li>
         <li><%= link_to "About",   '#about' %></li>
         <li><%= link_to "Log in", '#log_in' %></li>
         <li><%= link_to "Contact", '#contact' %></li>
-        <li><%= link_to "Sign up", signup_path %></li>
-      
-      <% elsif current_page?(login_path) %>
-
-        <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Sign up", signup_path %></li>
 
       <% elsif current_page?(signup_path) %>
