--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -3,12 +3,11 @@
 <div id ="forgot_pass">
 <br>
 <h2>Forgot password</h2>
-<br>
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="containerZ col-md-8 col-md-offset-2">
     <%= form_for(:password_reset, url: password_resets_path) do |f| %>
       <%= f.label :email %>
-      <%= f.email_field :email, placeholder: "Enter your email to reset your password", class: 'form-control' %>
+      <%= f.email_field :email, placeholder: "Enter your email to reset password", class: 'form-control' %>
       <%= f.submit "Submit", class: "btn btn-primary" %>
     <% end %>
   </div>
