--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -126,8 +126,8 @@
 <div id="log_in">
 <br>
 <h2 class ="slideanim">Log in</h2>
-<div class="row slideanim containerY">
-  <div class="col-md-6 col-md-offset-3">
+<div class="row slideanim ">
+  <div class="containerZ col-md-8 col-md-offset-2">
     <%= form_for(:session, url: login_path) do |f| %>
 
       <%= f.label :email %>
@@ -148,11 +148,13 @@
 </div>
 </div>
 
-<div id="contact" class="containerX">
+<div id="contact">
+<br>
+<br>
   <h2 class ="slideanim">Contact</h2>
   <br>
 <div class="row slideanim">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="containerZ col-md-8 col-md-offset-2">
       <div class="row">
 
   <%= form_for @contact do |f| %>
@@ -178,13 +180,13 @@
       <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
     </div>
 
-  <div class="col-md-6">
+  <div class="col-md-6 form-group">
 
     <%= recaptcha_tags %>
 
     </div>
 
-        <div class="col-md-offset-2 col-md-4">
+    <div class="col-md-offset-2 col-md-4 form-group">
       <%= f.submit 'Send message', :class=> "btn btn-primary" %>
     </div>
   <% end %>
@@ -193,6 +195,8 @@
 </div>
 </div>
 </div>
+<br>
+<br>
 
 
 <script>
