--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,14 @@
 <% provide(:title, 'All users') %>
-<div id="user_index">
+<div class="user_index">
 <h2>All users</h2>
-<%= will_paginate %>
-<ul class="users">
+</div>
+<div class="col-md-8 col-md-offset-4" >
+<%= will_paginate :previous_label => '&laquo;', :next_label => '&raquo;' %>
+</div>
+
+<ul class="users col-md-6">
   <%= render @users %>
 </ul>
-<%= will_paginate %>
+<div class="col-md-8 col-md-offset-4" >
+<%= will_paginate :previous_label => '&laquo;', :next_label => '&raquo;' %>
 </div>
