--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -134,7 +134,7 @@
       <%= f.email_field :email, placeholder: "Enter your email", required: true, class: 'form-control' %>
 
       <%= f.label :password %>
-      <%= link_to "(Forgot password?)", new_password_reset_path %>
+      <%= link_to "(Forgot password?)", new_password_reset_path, class: 'forgot_link'%>
       <%= f.password_field :password, placeholder: "Enter your password", required: true, class: 'form-control' %>
 
       <%= f.label :remember_me, class: "checkbox inline remember" do %>
