--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -396,13 +396,13 @@ p {
 
 /* miscellaneous */
 
-.debug_dump {
+/* .debug_dump {
   clear: both;
   float: left;
   width: 100%;
   margin-top: 45px;
   @include box_sizing;
-}
+} */
 
 /* sidebar */
 
