--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -31,11 +31,23 @@ body {
       }
 
 .containerZ {   
-      padding: 20px 200px;
+      padding: 20px 150px;
       }
 
-#captcha {
+.containerX {   
+      padding: 20px 150px;
+      margin:auto;
+      }
+
+.captcha {
 padding-top: 20px;
+}
+
+.captcha2 {
+padding-top: 10px;
+padding-bottom: 10px;
+margin-top: 20px;
+margin-bottom: 20px;
 }
 
 section {
