--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -127,7 +127,7 @@
 <br>
 <h2 class ="slideanim">Log in</h2>
 <div class="row slideanim ">
-  <div class="containerZ col-md-8 col-md-offset-2">
+  <div class="containerZ col-md-6 col-md-offset-3">
     <%= form_for(:session, url: login_path) do |f| %>
 
       <%= f.label :email %>
@@ -154,7 +154,7 @@
   <h2 class ="slideanim">Contact</h2>
   <br>
 <div class="row slideanim">
-    <div class="containerZ col-md-8 col-md-offset-2">
+    <div class="containerZ col-md-6 col-md-offset-3">
       <div class="row">
 
   <%= form_for @contact do |f| %>
@@ -169,35 +169,31 @@
 
       <%= f.email_field :email, :required => true, label: false, placeholder: "Enter your email", class: 'form-control' %>
 
-    </div>
+     </div>
 
      <div class="col-md-12">
 
       <%= f.text_area :message, :required => true, label: false, placeholder: "Enter your message", rows: 5, class: 'form-control text_area' %>
-    </div>
+     </div>
     
-    <div class= "hidden">
+     <div class= "hidden">
       <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
-    </div>
+     </div>
 
-  <div class="col-md-6 form-group">
-
-    <%= recaptcha_tags %>
-
-    </div>
-
-    <div class="col-md-offset-2 col-md-4 form-group">
+     <div class="col-md-12">
       <%= f.submit 'Send message', :class=> "btn btn-primary" %>
-    </div>
+     </div>
+ 
+     <div class ="captcha2 col-md-6">
+      <%= recaptcha_tags %>
+     </div>
+ 
   <% end %>
 
 </div>
 </div>
 </div>
 </div>
-<br>
-<br>
-
 
 <script>
 $(document).ready(function(){
