--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 
 <h2>Sign up</h2>
 <br>
-<div class="row containerY">
+<div class="row containerZ">
  <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user, url: signup_path) do |f| %>
        <%= render 'shared/error_messages', object: f.object %>
@@ -22,7 +22,7 @@
       <%= f.password_field :password_confirmation, placeholder: "Re-enter your password", class: 'form-control' %>
       <%= f.submit "Create my account", class: "btn btn-primary" %>
      
-     <div id ="captcha">
+     <div class ="captcha">
 
 <%= recaptcha_tags %>
 
