--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -12,7 +12,7 @@
       </section>
     </aside>
     <div id ="feed" class="col-md-8">
-
+    <br>
       <h2>Micropost Feed</h2>  
       <%= render 'shared/feed' %>
 
@@ -111,10 +111,8 @@
       <span class="sr-only">Next</span>
     </a>
 </div>
-<br>
-<div id="about" class="container text-justify">
-    <h1>Welcome to the Cur1osity.com</h1>
-    <br>
+<div id="about" class="container">
+    <h1 class ="col-md-6 col-md-offset-3">Welcome to the Cur1osity.com</h1>
     <br>
 <p class="col-md-8 col-md-offset-2">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p>
 
@@ -183,6 +181,7 @@
      <div class="col-md-12">
       <%= f.submit 'Send message', :class=> "btn btn-primary" %>
      </div>
+  <br>
  
      <div class ="captcha2 col-md-6">
       <%= recaptcha_tags %>
