--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -221,10 +221,11 @@ padding: 5px !important;
 #about h1 {
   background-color: #FF5733;
   color: white;
-  padding: 10px 10px;
+  padding: 0px 10px;
   border-radius: 10px;
   font-weight: 300;
   font-size: 2.2em;
+  width: 100%;
 }
 
 .main_text {
