--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Forgot password") %>
 
-<div id ="forgot_pass">
+<div id ="pass">
 <br>
 <h2>Forgot password</h2>
 <div class="row">
