--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -11,7 +11,7 @@
         <%= render 'shared/micropost_form' %>
       </section>
     </aside>
-    <div id ="feed" class="col-md-8">
+    <div class="col-md-8 title">
     <br>
       <h2>Micropost Feed</h2>  
       <%= render 'shared/feed' %>
@@ -37,7 +37,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <%= image_tag("szarjah1.jpg", alt: "Rails logo", size: "1200x700") %>
+        <%= image_tag("szarjah1.jpg", alt: "The Dancing Fountain", size: "1200x700") %>
         <div class="carousel-caption description">
           <h3>Sharjah, UAE</h3>
           <p>The Dancing Fountain</p>
@@ -45,7 +45,7 @@
       </div>
 
       <div class="item">
-         <%= image_tag("singapur_garden2.jpg", alt: "Rails logo", size: "1200x700") %>
+         <%= image_tag("singapur_garden2.jpg", alt: "Garden by the Bay", size: "1200x700") %>
         <div class="carousel-caption description">
           <h3>Singapur</h3>
           <p>Garden by the Bay</p>
@@ -53,7 +53,7 @@
       </div>
     
       <div class="item">
-        <%= image_tag("singapur_marina1.jpg", alt: "Rails logo", size: "1200x700") %>
+        <%= image_tag("singapur_marina1.jpg", alt: "Singapur Marina", size: "1200x700") %>
         <div class="carousel-caption description">
           <h3>Singapur</h3>
           <p>Singapur Marina</p>
@@ -61,7 +61,7 @@
       </div>
 
     <div class="item">
-         <%= image_tag("singapur_garden1.jpg", alt: "Rails logo", size: "1200x700") %>
+         <%= image_tag("singapur_garden1.jpg", alt: "Garden by the Bay", size: "1200x700") %>
         <div class="carousel-caption description">
           <h3>Singapur</h3>
           <p>Garden by the Bay</p>
@@ -69,7 +69,7 @@
       </div>
     
       <div class="item">
-        <%= image_tag("singapur_garden3.jpg", alt: "Rails logo", size: "1200x700") %>
+        <%= image_tag("singapur_garden3.jpg", alt: "Garden by the Bay", size: "1200x700") %>
         <div class="carousel-caption description">
           <h3>Singapur</h3>
           <p>Garden by the Bay</p>
@@ -77,25 +77,25 @@
       </div>
 
       <div class="item">
-        <%= image_tag("dubai_marina1.jpg", alt: "Rails logo", size: "1200x700") %>
+        <%= image_tag("dubai_marina1.jpg", alt: "Dubai Marina", size: "1200x700") %>
         <div class="carousel-caption description">
-          <h3>Dubai</h3>
+          <h3>Dubai, UAE</h3>
           <p>Dubai Marina</p>
         </div>      
       </div>
 
     <div class="item">
-         <%= image_tag("dubai_mall1.jpg", alt: "Rails logo", size: "1200x700") %>
+         <%= image_tag("dubai_mall1.jpg", alt: "Dubai Fountain", size: "1200x700") %>
         <div class="carousel-caption description">
-          <h3>Dubai</h3>
+          <h3>Dubai, UAE</h3>
           <p>Dubai Fountain</p>
         </div>      
       </div>
     
       <div class="item">
-        <%= image_tag("dubai_madinat1.jpg", alt: "Rails logo", size: "1200x700") %>
+        <%= image_tag("dubai_madinat1.jpg", alt: "Madinat Jumeirah", size: "1200x700") %>
         <div class="carousel-caption description">
-          <h3>Dubai</h3>
+          <h3>Dubai, UAE</h3>
           <p>Madinat Jumeirah</p>
         </div>      
       </div>
