--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
 
   <div class="col-md-8">
     <% if @user.microposts.any? %>
-    <div id="user_microposts">
+    <div class ="title">
     <br>
       <h2>Microposts (<%= @user.microposts.count %>)</h2>
       <ol class="microposts">
