--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -16,7 +16,7 @@
     </section>
   </aside>
   <div class="col-md-8">
-  <div id="title">
+  <div class="title">
     <h2><%= @title %></h2>
     <% if @users.any? %>
       <ul class="users follow">
