--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
+   <meta name="author" content="Marcin Gajc">
+    <meta name="description" content="Ruby on Rails testing page">
     <title><%= full_title(yield(:title)) %></title>
     <%= render 'layouts/rails_default' %>
     <%= render 'layouts/shim' %>
