--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to "Profile", current_user, class: 'other_links' %></li>
               <li><%= link_to "Settings", edit_user_path(current_user), class: 'other_links' %></li>
+              <li><%= link_to "Send API token", api_token_path, class: 'other_links' %></li>
               <li><%= link_to "Log out", logout_path, method: :delete, class: 'log_out_link' %></li>
               <li class="divider"></li>
               <li><%= link_to "Delete account", current_user, method: :delete, class: 'delete_link',
