--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -182,9 +182,11 @@
       <%= f.submit 'Send message', :class=> "btn btn-primary" %>
      </div>
  
-     <div class ="captcha2 col-md-6">
-      <%= recaptcha_tags %>
-     </div>
+      <div class="col-md-6">
+
+    <%= recaptcha_tags if Rails.env.production? %>
+
+ </div>
  
   <% end %>
 
